# 25a-emb-expert-1-gus-trager

main/: CMakeLists.txt  main.c  server_common.c
mqtt/: mqtt_client.c
